--- a/less/base.less
+++ b/less/base.less
@@ -36,3 +36,11 @@ ul {
     padding: 0 40px;
   }  
 }
+
+//  For Desktop
+
+@media (min-width:@screen_lg) {
+  .wrap-inner {
+    padding: 0 120px;
+  }  
+}
