--- a/less/megapolis.less
+++ b/less/megapolis.less
@@ -23,6 +23,8 @@
   }
 }
 
+//  For tablet
+
 @media (min-width:@screen_md) {
   .carrot {
     padding: 60px 15px 35px;
@@ -37,5 +39,14 @@
     &:last-child {
       padding-right: 20px;
     }
+  }
+}
+
+//  For Desktop
+
+@media (min-width:@screen_lg) {
+  .carrot {
+    padding-top: 75px;
+    padding-bottom: 90px;
   }
 }
