--- a/less/price.less
+++ b/less/price.less
@@ -144,3 +144,32 @@
     display: none;
   }
 }
+
+//  For Desktop
+
+@media (min-width:@screen_lg) {
+  .tarif-table {
+    
+    margin-bottom: 95px;
+    
+    .row-1 {
+      height: 100px;
+    }
+    
+    .tarif-cost {
+      font-size: 24px;
+      line-height: 30px;
+    }
+    
+    .col-1 {
+      width: 235px;
+      height: 60px;
+      text-align: left;
+      padding-left: 20px;
+    }
+    
+    .price__option {
+      width: 233px;
+    }
+  }
+}
