--- a/less/review.less
+++ b/less/review.less
@@ -1,13 +1,13 @@
 .review {
   padding-top: 30px;
-
+  
   &:after {
     content: " ";
     display: block;
     width: 100%;
     height: 32px;
     padding-top: 42px;
-    background-image: linear-gradient(175deg, white 50%, @bg-color--tips 50%);
+    background-image: linear-gradient(178deg, white 50%, @bg-color--tips 50%);
   }
 }
 
@@ -60,5 +60,45 @@
     display: block;
     order: 3;
     padding-bottom: 30px;
+  }
+}
+
+//  For Desktop
+
+@media (min-width:@screen_lg) {
+
+  .review {
+    padding-top: 160px;
+
+    &:before {
+      content: " “ ";
+      display: block;
+      font-size: 240px;
+      line-height: 30px;
+      color: #efefef;
+      font-family: 'Georgia';
+    }
+  }
+  
+  .review__comment {
+    width: 760px;
+    margin: 0 auto;
+    font-size: 18px;
+    line-height: 30px;
+    color: @txt-color;
+  }
+  
+  .review__author {
+    font-size: 24px;
+    line-height: 30px;
+  }
+  
+  .review__author-desc {
+    font-size: 18px;
+    line-height: 30px;
+  }
+  
+  .review-slider {
+    display: none;
   }
 }
