--- a/less/download.less
+++ b/less/download.less
@@ -51,7 +51,11 @@
 
 @media (min-width:@screen_md) {
   .download {
-    width: 360px;
+    .wrap-inner {
+      padding: 0;
+    }
+    
+    width: 280px;
     padding-top: 35px;
     z-index: 2;
     background: none;
@@ -73,7 +77,11 @@
 
 @media (min-width:@screen_lg) {
   .download {
-    width: 550px;
+    .wrap-inner {
+      padding: 0;
+    }
+    
+    width: 310px;
     //padding-right: 640px;
     padding-top: 0;
     padding-bottom: 130px;
