--- a/less/effect.less
+++ b/less/effect.less
@@ -2,30 +2,31 @@
   padding: 100px 0;
   //width: 245px;
   display: none;
-  position: relative;
+  //position: relative;
 }
 
 .effect__item {
   text-align: left;
   padding-left: 315px;
   //position: relative;
-  
-  &:before {
-    position: absolute;
-    left: 40px;
-    top: 55px;
-    content: " ";
-    display: block;
-    background: url("../img/effect-clock.png");
-    width: 262px;
-    height: 302px;
-  }
 }
 
 .effect__title {
   font-size: 30px;
   font-weight: 700;
   line-height: 36px;
+  position: relative;
+  
+  &:before {
+    position: absolute;
+    left: calc(-65px - 262px);
+    top: -70px;
+    content: " ";
+    display: block;
+    background: url("../img/effect-clock.png");
+    width: 262px;
+    height: 302px;
+  }
 }
 
 .effect__desc {
@@ -48,14 +49,19 @@
   .effect {
     display: block;
     padding-bottom: 115px;
+    display: flex;
+  }
+  .effect__desc {
+    width: 300px;
   }
 }
 
 //  For Desktop
 
-@media (min-width:@screen_md) {
+@media (min-width:@screen_lg) {
   .effect {
     background: @bg-color--tips;
+    display: flex;
   }
   
   .effect__title {
@@ -68,6 +74,7 @@
     padding-bottom: 35px;
     font-size: 18px;
     line-height: 30px;
+    width: 520px;
   }
   
   .effect__more {
