--- a/less/intro.less
+++ b/less/intro.less
@@ -21,7 +21,8 @@
   .intro {
     display: flex;
     background: none;
-    width: 280px;
+    width: 245px;
+    padding-left: 20px;
 
     .wrap-inner {
     background: none;
@@ -33,8 +34,8 @@
     color: @color--base;
     font-size: 40px;
     line-height: 48px;
-    padding-right: 370px;
-    padding-left: 40px; 
+    //padding-right: 370px;
+    //padding-left: 40px; 
   }
 
   .wrap {
@@ -49,7 +50,8 @@
 
 @media (min-width:@screen_lg) {
   .intro {
-    width: 310px;
+    padding-left: 0;
+    width: 305px;
   }
   
   .intro__title {
