--- a/css/style.css
+++ b/css/style.css
@@ -40,8 +40,14 @@ ul {
   }
 }
 .slider__control {
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 .slider__toggle {
@@ -67,8 +73,14 @@ ul {
   width: 100%;
 }
 .page-header .wrap-inner {
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 .logo-link {
@@ -86,7 +98,11 @@ ul {
 }
 .menu-list {
   list-style-type: none;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
   flex-direction: row;
 }
 .menu__item {
@@ -142,6 +158,8 @@ ul {
 }
 @media (min-width: 700px) {
   .intro {
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
     background: none;
     width: 245px;
@@ -198,8 +216,14 @@ ul {
 .platform {
   padding-top: 30px;
   padding-bottom: 28px;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-justify-content: space-around;
+  -ms-flex-pack: distribute;
   justify-content: space-around;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 .platform__icon--apple {
@@ -336,8 +360,14 @@ ul {
     background: url("../img/tips-iphone_md.png") 0 0 no-repeat;
   }
   .tips .wrap-inner {
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-align-items: flex-end;
+    -ms-flex-align: end;
     align-items: flex-end;
   }
   .tips__item {
@@ -350,8 +380,14 @@ ul {
     display: none;
   }
   .tips .wrap-inner {
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
     flex-direction: row;
+    -webkit-align-items: flex-start;
+    -ms-flex-align: start;
     align-items: flex-start;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
     justify-content: space-between;
   }
   .tips__item {
@@ -426,19 +462,27 @@ ul {
   display: none;
 }
 .review__item:first-child {
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
 .review__author {
   font-size: 18px;
   font-weight: 700;
   line-height: 30px;
+  -webkit-order: 1;
+  -ms-flex-order: 1;
   order: 1;
   padding-bottom: 10px;
 }
 .review__author-desc {
   display: none;
   font-weight: 400;
+  -webkit-order: 2;
+  -ms-flex-order: 2;
   order: 2;
   color: #283645;
 }
@@ -446,20 +490,28 @@ ul {
   padding-bottom: 40px;
   font-weight: 400;
   line-height: 30px;
+  -webkit-order: 3;
+  -ms-flex-order: 3;
   order: 3;
 }
 @media (min-width: 700px) {
   .review__comment {
     font-size: 18px;
+    -webkit-order: 1;
+    -ms-flex-order: 1;
     order: 1;
   }
   .review__author {
     font-size: 20px;
     padding-bottom: 5px;
+    -webkit-order: 2;
+    -ms-flex-order: 2;
     order: 2;
   }
   .review__author-desc {
     display: block;
+    -webkit-order: 3;
+    -ms-flex-order: 3;
     order: 3;
     padding-bottom: 30px;
   }
@@ -500,7 +552,11 @@ ul {
   background: #f2f2f2;
 }
 .tarif {
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
   justify-content: center;
 }
 .tarif__item {
@@ -532,7 +588,11 @@ ul {
   padding-right: 20px;
   border: 1px solid #e5e5e5;
   text-align: left;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 .tarif__option:after {
@@ -658,7 +718,11 @@ ul {
   font-weight: 400;
 }
 .pagination {
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
   justify-content: center;
   list-style-type: none;
   padding-bottom: 60px;
@@ -721,6 +785,8 @@ ul {
   .effect {
     display: block;
     padding-bottom: 115px;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
   }
   .effect__desc {
@@ -730,6 +796,8 @@ ul {
 @media (min-width: 1200px) {
   .effect {
     background: #f2f2f2;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
   }
   .effect__title {
@@ -765,8 +833,13 @@ ul {
   display: -moz-flex;
   display: -ms-flex;
   display: -o-flex;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-flex-wrap: nowrap;
+  -ms-flex-wrap: nowrap;
   flex-wrap: nowrap;
 }
 .contacts__item {
@@ -804,7 +877,11 @@ ul {
   background: url(../img/footer-logo.png) 50% 50% no-repeat;
 }
 .social {
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
   justify-content: center;
   padding-bottom: 35px;
 }
@@ -827,8 +904,14 @@ ul {
   margin-right: 0;
 }
 .copyright {
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
   align-items: center;
   padding-bottom: 46px;
 }
@@ -850,8 +933,14 @@ ul {
     line-height: 48px;
   }
   .contacts {
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
     flex-direction: row;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
     justify-content: center;
   }
   .contacts__item {
@@ -874,7 +963,10 @@ ul {
     display: -moz-flex;
     display: -ms-flex;
     display: -o-flex;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
     justify-content: space-between;
   }
   .index-footer {
