--- a/less/download.less
+++ b/less/download.less
@@ -50,16 +50,13 @@
 //  For tablet
 
 @media (min-width:@screen_md) {
-  .download {
-    .wrap-inner {
-      padding: 0;
-    }
-    
+  .download {    
     width: 280px;
     padding-top: 35px;
     z-index: 2;
     background: none;
     padding-bottom: 110px;
+    padding-left: 40px;
   }
 
   .platform {
@@ -77,14 +74,12 @@
 
 @media (min-width:@screen_lg) {
   .download {
-    .wrap-inner {
-      padding: 0;
-    }
     
     width: 310px;
     //padding-right: 640px;
     padding-top: 0;
     padding-bottom: 130px;
+    padding-left: 120px;
   }
   
   .btn {
